# fugger2-tools

./: .gitignore  pyproject.toml
fugger2_tools/: __init__.py  __main__.py  const.py  converter.py  structs.py
